// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickableList /> should render correctly 1`] = `
Array [
  <div
    class="styles__Container-hXBJYj dSvulo"
  >
    <div
      class="styles__Container-dhAnWt fRDxhy pickableList-header"
    >
      <input
        class="all-rows-checkbox"
        id="allRows"
        type="checkbox"
      />
      <p>
        Items
      </p>
    </div>
    <div
      class="styles__Container-jNZwcA iMzebZ"
    >
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #1
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #2
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #3
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #4
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #5
          </p>
        </div>
      </div>
    </div>
  </div>,
  ");",
]
`;

exports[`<PickableList /> should render correctly with header and row not selectable 1`] = `
Array [
  <div
    class="styles__Container-hXBJYj dSvulo"
  >
    <div
      class="styles__Container-dhAnWt fRDxhy pickableList-header"
    >
      <p>
        Items
      </p>
    </div>
    <div
      class="styles__Container-jNZwcA iMzebZ"
    >
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #1
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #2
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #3
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #4
          </p>
        </div>
      </div>
      <div
        class="styles__Container-fmnQRi kkTtPG pickableList-row"
      >
        <div
          class="styles__ChildWrapper-gzHiWF pickableList-row-content"
        >
          <p>
            Je suis un bel item #5
          </p>
        </div>
      </div>
    </div>
  </div>,
  ");",
]
`;

exports[`<PickableList /> should render correctly without header 1`] = `
<div
  class="styles__Container-hXBJYj dSvulo"
>
  <div
    class="styles__Container-jNZwcA iMzebZ"
  >
    <div
      class="styles__Container-fmnQRi kkTtPG pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-gzHiWF pickableList-row-content"
      >
        <p>
          Je suis un bel item #1
        </p>
      </div>
    </div>
    <div
      class="styles__Container-fmnQRi kkTtPG pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-gzHiWF pickableList-row-content"
      >
        <p>
          Je suis un bel item #2
        </p>
      </div>
    </div>
    <div
      class="styles__Container-fmnQRi kkTtPG pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-gzHiWF pickableList-row-content"
      >
        <p>
          Je suis un bel item #3
        </p>
      </div>
    </div>
    <div
      class="styles__Container-fmnQRi kkTtPG pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-gzHiWF pickableList-row-content"
      >
        <p>
          Je suis un bel item #4
        </p>
      </div>
    </div>
    <div
      class="styles__Container-fmnQRi kkTtPG pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-gzHiWF pickableList-row-content"
      >
        <p>
          Je suis un bel item #5
        </p>
      </div>
    </div>
  </div>
</div>
`;
